--- a/src/server/FantomasOnlineV5/FantomasOnlineV5.fsproj
+++ b/src/server/FantomasOnlineV5/FantomasOnlineV5.fsproj
@@ -10,6 +10,7 @@
     <IsLambda>true</IsLambda>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="../../shared/Types.fs" />
     <Compile Include="../../shared/FantomasOnlineShared.fs" />
     <Compile Include="..\HttpConstants.fs" />
     <Compile Include="..\AWSLambdaExtensions.fs" />
