--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ fsharp_max_if_then_else_short_width = 50
 fsharp_max_function_binding_width = 50
 fsharp_align_function_signature_to_indentation = true
 fsharp_keep_max_number_of_blank_lines = 1
+fsharp_experimental_keep_indent_in_branch = true
 
 [build.fsx]
 fsharp_keep_max_number_of_blank_lines = 1
