Remove IsLoading from Bubble model and use a State union for each tab. Implement Loader.

--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -26,18 +26,21 @@
     <Compile Include="Oak\State.fs" />
     <Compile Include="Oak\Graph.fs" />
     <Compile Include="Oak\GraphView.fs" />
+    <Compile Include="Oak\View.fsi" />
     <Compile Include="Oak\View.fs" />
 
     <Compile Include="FantomasOnline\Model.fs" />
     <Compile Include="FantomasOnline\Encoders.fs" />
     <Compile Include="FantomasOnline\Decoders.fs" />
     <Compile Include="FantomasOnline\State.fs" />
+    <Compile Include="FantomasOnline\View.fsi" />
     <Compile Include="FantomasOnline\View.fs" />
 
     <Compile Include="ASTViewer\Model.fs" />
     <Compile Include="ASTViewer\Encoders.fs" />
     <Compile Include="ASTViewer\Decoders.fs" />
     <Compile Include="ASTViewer\State.fs" />
+    <Compile Include="ASTViewer\View.fsi" />
     <Compile Include="ASTViewer\View.fs" />
 
     <Compile Include="Model.fs" />
