--- a/src/server/ASTViewer/ASTViewer.fsproj
+++ b/src/server/ASTViewer/ASTViewer.fsproj
@@ -16,12 +16,14 @@
     <Compile Include="..\SuaveExtensions.fs" />
     <Compile Include="Encoders.fs" />
     <Compile Include="Decoders.fs" />
+    <Compile Include="ExpandedAST.fsi" />
+    <Compile Include="ExpandedAST.fs" />
     <Compile Include="GetAST.fs" />
     <Compile Include="Lambda.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fantomas.FCS" Version="6.0.1" />
+    <PackageReference Include="Fantomas.Core" Version="6.0.3" />
     <PackageReference Include="FSharp.Core" Version="6.0.6" />
     <PackageReference Include="Thoth.Json.Net" Version="8.0.0" />
   </ItemGroup>
