Add signature file for OakViewer.Encoders

--- a/src/server/OakViewer/OakViewer.fsproj
+++ b/src/server/OakViewer/OakViewer.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="..\AWSLambdaExtensions.fs" />
     <Compile Include="..\SuaveExtensions.fs" />
     <Compile Include="Decoders.fs" />
+    <Compile Include="Encoders.fsi" />
     <Compile Include="Encoders.fs" />
     <Compile Include="GetOak.fs" />
     <Compile Include="Lambda.fs" />
