--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,12 +5,10 @@
     "build": "vite build --base=/fantomas-tools/",
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\"",
-    "sass": "sass src/styles/style.sass"
+    "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
     "@monaco-editor/react": "4.5.0",
-    "bootstrap": "5.2.3",
     "lz-string": "1.4.4",
     "notyf": "3.10.0",
     "react": "^18.2.0",
@@ -23,7 +21,6 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "prettier": "2.8.7",
     "prop-types": "^15.8.1",
-    "sass": "1.62.0",
     "vite": "^4.3.1"
   }
 }
