--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,7 +10,8 @@
         <NoWarn>NU1603</NoWarn>
         <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
         <ServerGarbageCollection>true</ServerGarbageCollection>
-        <OtherFlags>$(OtherFlags) --test:GraphBasedChecking</OtherFlags>
+        <LangVersion>preview</LangVersion>
+        <OtherFlags>$(OtherFlags) --test:GraphBasedChecking --test:ParallelOptimization --test:ParallelIlxGen</OtherFlags>
         <!-- Override these values to point to your local fantomas repository -->
         <FantomasMainRepository>$(MSBuildThisFileDirectory).deps\fantomas</FantomasMainRepository>
         <FantomasPreviewRepository>$(MSBuildThisFileDirectory).deps\main</FantomasPreviewRepository>
