--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,9 +18,9 @@
     "vis-network": "9.1.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-react": "^4.0.3",
     "prettier": "2.8.7",
     "prop-types": "^15.8.1",
-    "vite": "^4.3.9"
+    "vite": "^4.4.5"
   }
 }
