--- a/src/server/ASTViewer/ASTViewer.fsproj
+++ b/src/server/ASTViewer/ASTViewer.fsproj
@@ -6,6 +6,7 @@
     <OutputType>exe</OutputType>
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
     <IsLambda>true</IsLambda>
   </PropertyGroup>
   <ItemGroup>
@@ -23,7 +24,9 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fantomas.Core" Version="6.3.0-alpha-004" />
+    <ProjectReference Include="$(FantomasMainRepository)\src\Fantomas.Core\Fantomas.Core.fsproj" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="6.0.6" />
     <PackageReference Include="Thoth.Json.Net" Version="8.0.0" />
   </ItemGroup>
