Remove Fable cli tool, SatelliteResourceLanguages, update publish folder output

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -17,6 +17,7 @@
         <FantomasPreviewRepository>$(MSBuildThisFileDirectory).deps\main</FantomasPreviewRepository>
         <RollForward>LatestMajor</RollForward>
         <UseArtifactsOutput>true</UseArtifactsOutput>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(IsLambda)' == 'true'">
