--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -16,6 +16,8 @@
         <FantomasMainRepository>$(MSBuildThisFileDirectory).deps\fantomas</FantomasMainRepository>
         <FantomasPreviewRepository>$(MSBuildThisFileDirectory).deps\main</FantomasPreviewRepository>
         <RollForward>LatestMajor</RollForward>
+        <UseArtifactsOutput>true</UseArtifactsOutput>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(IsLambda)' == 'true'">
